--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "antd-mobile": "^2.2.8",
+    "axios": "^0.18.0",
     "less": "^3.9.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
