--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "axios": "^0.18.0",
     "less": "^3.9.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
