--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "less": "^3.9.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "swiper": "^4.4.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
